added categories for rating.

--- a/app/views/beers/show.html.slim
+++ b/app/views/beers/show.html.slim
@@ -17,8 +17,11 @@ p
   strong ABV:
   = number_to_percentage @beer.abv, :precision => 1 
 p
-  | Rate:
-  = render "rating"
+  strong Rate:
+p Overall: #{render :partial => "beers/rating", :locals => { :dim => "overall" }}
+p Taste:  #{render :partial => "beers/rating", :locals => { :dim => "taste" }}
+p Smell:  #{render :partial => "beers/rating", :locals => { :dim => "smell" }}
+
 br
 = user_signed_in? ? link_to("Add a new listing", new_beer_item_path(:beer_item => { :beer_id => @beer.id })) : ""
 
