--- a/app/views/ratings/create.js.erb
+++ b/app/views/ratings/create.js.erb
@@ -1,1 +1,1 @@
-$('table#rating').repalceWith("<%= escape_javascript(render :partial => 'beers/rating' ) %>");
+$('table#rating').replaceWith("<%= escape_javascript(render :partial => 'beers/rating', :locals => { :dim => @dimension} ) %>");
