--- a/app/views/beers/show.html.slim
+++ b/app/views/beers/show.html.slim
@@ -2,29 +2,24 @@
   = javascript_include_tag 'rating_ballot'
 
 h1 
-	= @beer.name
-	- unless @beer.beer_style.nil?
-		span id="beer-style"
-			= @beer.beer_style.name
+  = @beer.name
+  - unless @beer.beer_style.nil?
+    span id="beer-style"
+      = @beer.beer_style.name
 div class="brewerylink"
   = link_to @beer.brewery.name, @beer.brewery
 p
   strong Being served at #{pluralize(@beer.bars.count, "bar")}
+/ p
+/   strong Description:
+/   = @beer.description 
 p
-  strong Description:
-  = @beer.description 
-p
-  strong ABV:
-  = number_to_percentage @beer.abv, :precision => 1 
+  strong ABV:  #{number_to_percentage @beer.abv, :precision => 1}
 p
   strong Rate:
-  div id="ratings_container"
-    - [:overall, :taste, :smell, :color, :feel].each do |category|
-      p 
-        #{category}
-        br
-        #{render :partial => "beers/rating", :locals => { :dim => category }}
-        br
+  div id="ratings-container"
+    - ['overall', 'taste', 'smell', 'color', 'feel'].each do |category|
+      div class="ratings-business"  #{category.titleize} (avg: #{@beer.average_rating(category)})  #{render :partial => "beers/rating", :locals => { :dim => category }}
 
 br
 = user_signed_in? ? link_to("Add a new listing", new_beer_item_path(:beer_item => { :beer_id => @beer.id })) : ""
