--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -141,11 +141,20 @@ a.no_hover_background {
   display: none;
   float: left; 
 }
-#main form label.rating {
-	
-	
+
+#main div#ratings-container {
+  margin-left: 30px;
 }
 
+#main div.ratings-business {
+  height: 25px;
+}
+
+#main div#ratings-container form.rating_ballot { 
+  float: right;
+  margin-right: 630px;
+  margin-top: -6px !important;
+}
 form.rating_ballot input#rating_submit { display: none; }
 form.rating_ballot input.rating_button { display: none; }
 form.rating_ballot label.rating { cursor: pointer; display: block; height: 25px; width: 25px; float: left; }
