improved the look of notices and alerts

--- a/app/views/layouts/_doc_header.html.slim
+++ b/app/views/layouts/_doc_header.html.slim
@@ -1,17 +1,12 @@
 head
   title Atlanta Beer List
   = favicon_link_tag "abl_64x64.ico" 
-  = stylesheet_link_tag "style.css", "jquery.qtip.min.css"
+  = stylesheet_link_tag "style.css", "jquery.qtip.min.css", "overcast/jquery-ui-1.8.16.custom.css"
   = javascript_include_tag "jquery.min.js"
   = javascript_include_tag "jquery.rails.js"
   = javascript_include_tag "jquery.qtip.min.js"
   = javascript_include_tag "jquery-ui-1.8.16.custom.min.js"
   = javascript_include_tag "jquery.metadata.js"
-  = javascript_include_tag "gmaps4rails/gmaps4rails.base.js"
-  = javascript_include_tag "gmaps4rails/gmaps4rails.googlemaps.js"
-  = javascript_include_tag "gmaps4rails/gmaps4rails.bing.js"
-  = javascript_include_tag "gmaps4rails/gmaps4rails.mapquest.js"
-  = javascript_include_tag "gmaps4rails/gmaps4rails.openlayers.js"
   = javascript_include_tag "script.js"
   link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'
   = csrf_meta_tag
