--- a/app/views/bars/show.html.slim
+++ b/app/views/bars/show.html.slim
@@ -1,3 +1,10 @@
+- content_for :head do
+  = javascript_include_tag "gmaps4rails/gmaps4rails.base.js"
+  = javascript_include_tag "gmaps4rails/gmaps4rails.googlemaps.js"
+  = javascript_include_tag "gmaps4rails/gmaps4rails.bing.js"
+  = javascript_include_tag "gmaps4rails/gmaps4rails.mapquest.js"
+  = javascript_include_tag "gmaps4rails/gmaps4rails.openlayers.js"
+
 h1  = @bar.name
 p
   = @bar.address
