--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -238,19 +238,9 @@ a.no_hover_background {
   padding: 25px 50px;
   font-size: 20px; 
 }
-#main .notice {
-  color: black;
+#main .notice-container {
+  width: 40%;
   text-align: center;
- 	background: #F0F0F0 ;
-	border-radius: 9px;
-	margin: 0px 20%;
-}
-#main .alert {
-  color: red;
-  text-align: center; 
- 	background: #F0F0F0 ;
-	border-radius: 9px;
-	margin: 0px 20%;
 }
 #main #announcement {
   text-align: center;
