made edit/destroy/view links visible on beers/show.  Added undo notices for beers, brewerys

--- a/app/views/bars/_items_list.html.slim
+++ b/app/views/bars/_items_list.html.slim
@@ -35,7 +35,7 @@ table id="sorted_beer_item_list"
         - if user_signed_in?
           td = link_to 'Details', item, :class => "action_link"
           td = link_to 'Edit', edit_beer_item_path(item), :class => "action_link" 
-          td = link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete, :class => "action_link"
+          td = link_to 'Destroy', item, :method => :delete, :class => "action_link"
         - else
           td
           td
