--- a/app/views/beers/_beer_items_list.html.slim
+++ b/app/views/beers/_beer_items_list.html.slim
@@ -17,7 +17,7 @@ table id="sorted_beer_item_list"
       th
       th
       th
-  tbody
+  tbody class="with-action-links"
     - @beer_items.each do |item|
       tr
         td = link_to item.bar.name, item.bar
@@ -31,7 +31,8 @@ table id="sorted_beer_item_list"
         - if user_signed_in?
           td = link_to 'Details', item, :class => "action_link"
           td = link_to 'Edit', edit_beer_item_path(item), :class => "action_link"
-          td = link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete, :class => "action_link"
+          td = link_to 'Destroy', item, :method => :delete, :class => "action_link"
         - else
+          td
           td
           td
