--- a/app/views/beers/show.html.slim
+++ b/app/views/beers/show.html.slim
@@ -1,3 +1,6 @@
+= content_for :head do
+  = javascript_include_tag "rating_ballot"
+
 h1
   = @beer.name
   - unless @beer.beer_style.nil?
@@ -9,15 +12,19 @@ div class="brewerylink"
 
 p
   strong Being served at #{pluralize(@beer.bars.count, "bar")}
-/ p
-/   strong Description:
-/   = @beer.description 
+- if @beer.description.present?
+  p
+    strong Description:  
+    = @beer.description
 p
-  strong ABV:  
-  = number_to_percentage @beer.abv, :precision => 1 
+  strong ABV:  #{number_to_percentage @beer.abv, :precision => 1}
+p
+  strong Rate:
+  div id="ratings-container"
+    = render :partial => "ratings_group", :locals => { :beer => @beer }
 
 br
-= user_signed_in? ? link_to("Add a new listing", new_beer_item_path(:beer_item => { :beer_id => @beer.id })) : ""
+= user_signed_in? ? link_to("Add a new listing", new_beer_item_path(:beer_item => { :beer_id => @beer.id })) : nil
 
 div class="itemlist"
   = render 'beer_items_list'
