fix to correct bug that would prevent the class of a row from being refreshed after a beer is marked as had

--- a/app/views/beer_tracks/create.js.erb
+++ b/app/views/beer_tracks/create.js.erb
@@ -1,2 +1,4 @@
+$('tbody.with-action-links > tr').removeClass("active");
+$('a.action_link').hide();
 $("#beer_tracker_form_<%= @beer_item.id %>").html("<%= escape_javascript(render(:partial => 'bars/track_it', :locals => { :item => @beer_item })) %>");
 $("div#rating-popup-container").html("<%= escape_javascript(render(:partial => "bars/rating_popup", :locals => { :item => @beer_item }))%>");
