--- a/app/views/beer_tracks/destroy.js.erb
+++ b/app/views/beer_tracks/destroy.js.erb
@@ -1,1 +1,3 @@
+$('tbody.with-action-links > tr').removeClass("active");
+$('a.action_link').hide();
 $("#beer_tracker_form_<%= @beer_item.id %>").html("<%= escape_javascript(render(:partial => 'bars/track_it', :locals => { :item => @beer_item })) %>");
