added had-beers to the profile page with a preview of listings for those beers

--- a/app/views/beers/_beers_list.html.slim
+++ b/app/views/beers/_beers_list.html.slim
@@ -7,7 +7,7 @@ table
       th width=15 Pouring at...
   tbody
     - @beers.each do |beer|
-      tr id="beers/#{beer.id}"
+      tr data-url="beers/#{beer.id}"
         td = link_to beer.name, beer
         td = link_to beer.brewery.name, beer.brewery
         td = beer.try(:beer_style) ? beer.beer_style.name : nil
