--- a/app/views/layouts/_userbar.html.slim
+++ b/app/views/layouts/_userbar.html.slim
@@ -9,6 +9,8 @@ div id="user_bar"
     li = link_to "Breweries", breweries_path
     li |
     - if user_signed_in?
+      li = link_to "Profile", profile_path(current_user)
+      li |
       li Welcome, #{current_user.email} (#{link_to "Logout", destroy_user_session_path, :id=>'logout', :method => :delete})
     - else
       li = link_to "Signup", new_user_registration_path
