--- a/app/views/beer_items/show.html.slim
+++ b/app/views/beer_items/show.html.slim
@@ -6,6 +6,10 @@ p
 p
   strong  Bar:  
   = @beer_item.bar.name
+  
+p
+  strong Valid:  
+  = day_of_the_week(@beer_item.weekday)
 
 p
   strong  Pouring:  
