--- a/app/views/bars/_items_list.html.slim
+++ b/app/views/bars/_items_list.html.slim
@@ -5,7 +5,7 @@ table id="sorted_beer_item_list"
       - if user_signed_in?
         th width="7%" Had it?
       th width="20%"
-        = sortable "beers.name", "Name"
+        = sortable "beers.name", "Beer"
         span class="asc"
       th width="12%"
         = sortable "beers.abv", "ABV"
