--- a/app/views/beer_items/show.html.slim
+++ b/app/views/beer_items/show.html.slim
@@ -1,11 +1,11 @@
 h1  Details
 p
   strong  Beer:  
-  = @beer_item.beer.name
+  = link_to @beer_item.beer.name, @beer_item.beer
 
 p
   strong  Bar:  
-  = @beer_item.bar.name
+  = link_to @beer_item.bar.name, @beer_item.bar
   
 p
   strong Valid:  
