--- a/app/views/bars/_beers.html.slim
+++ b/app/views/bars/_beers.html.slim
@@ -4,7 +4,9 @@
   br
 - unless @recent_beer_items.empty?
   h2  Modified in the last week
-  = render :partial => "bars/items_list", :locals => { :items => @recent_beer_items }
+  div class="itemlist"
+    = render :partial => "bars/items_list", :locals => { :items => @recent_beer_items }
   br
 h2  All Beers
-= render :partial => "bars/items_list", :locals => { :items => @beer_items }
+div class="itemlist"
+  = render :partial => "bars/items_list", :locals => { :items => @beer_items }
