--- a/app/views/bars/_items_list.html.slim
+++ b/app/views/bars/_items_list.html.slim
@@ -31,11 +31,7 @@ table id="sorted_beer_item_list"
               = render :partial => "bars/track_it", :locals => { :item => item }
         td = link_to item.beer.name, item.beer
         td = number_to_percentage item.beer.abv, :precision => 1
-        - unless (item.volume.nil? || item.pouring.nil?)
-          td 
-            #{number_to_human(item.volume, :units => {:unit => item.volunit})} #{item.pouring}
-        - else
-          td = item.pouring
+        td = pouring(item)
         td = sprintf("%.3f",item.abd) 
         td = number_to_currency(item.price)
         - if user_signed_in?
