--- a/app/views/bars/_weekly_specials.html.slim
+++ b/app/views/bars/_weekly_specials.html.slim
@@ -17,10 +17,6 @@ table id="weekly-specials"
           td 
           td = link_to item.beer.name, item.beer
           td = number_to_percentage item.beer.abv, :precision => 1
-          - unless (item.volume.nil? || item.pouring.nil?)
-            td 
-              #{number_to_human(item.volume, :units => {:unit => item.volunit})} #{item.pouring}
-          - else
-            td = item.pouring
+          td = pouring(item)
           td = sprintf("%.3f",item.abd) 
           td = number_to_currency(item.price)
