added user stats to the user_bar

--- a/app/views/beer_tracks/create.js.erb
+++ b/app/views/beer_tracks/create.js.erb
@@ -1,3 +1,4 @@
 $('a.action_link').hide();
 $("div#rating-popup-container").html("<%= escape_javascript(render(:partial => "bars/rating_popup", :locals => { :item => @beer_item }))%>");
+$("span#user-stats").html("<%= escape_javascript(render "/layouts/user_stats") %>");
 $("#beer_tracker_form_<%= @beer_item.id %>").html("<%= escape_javascript(render(:partial => 'bars/track_it', :locals => { :item => @beer_item })) %>");
