added eager loading to speed up the loading of the ratings popup when the user says theyve had a beer

--- a/app/views/beer_items/index.html.slim
+++ b/app/views/beer_items/index.html.slim
@@ -1,5 +1,5 @@
 div id="main-page-intro-text"
-	h2 Welcome Home
+	h2 Welcome!
 	p
 		strong About us: 
 		|	You've stumbled on the best thing to happen to the Atlanta beer scene since Brickstore opened.  This is your gateway to beers and bars around the Atlanta area.  Use this site to find the best deal on that special beer you've been looking for or just check to see if the bar around the corner has a new one on tap.
@@ -10,7 +10,7 @@ div id="main-page-intro-text"
 		| Bars are constantly being added, so check back if you don&#146;t see what you&#146;re looking for.  If you&#146;d like to hear about our updates, #{{link_to "follow us on twitter", "http://twitter.com/#!/atlbeerlist", :target => "_blank"}}.
 
 div id="best-deals-table-wrapper"
-  h2 Today&#146;s Specials
+  h2 Specials going on today
   br
   div id="todays_specials"
     = render "todays_specials"
