--- a/app/views/beer_tracks/create.js.erb
+++ b/app/views/beer_tracks/create.js.erb
@@ -1,4 +1,11 @@
-$('a.action_link').hide();
-$("div#rating-popup-container").html("<%= escape_javascript(render(:partial => "bars/rating_popup", :locals => { :item => @beer_item }))%>");
+<% case @from %>
+<% when "bars_page" %>
+  $('a.action_link').hide();
+  $("div#rating-popup-container").html("<%= escape_javascript(render(:partial => "bars/rating_popup", :locals => { :item => @beer_item }))%>");
+  $("#beer_tracker_form_<%= @beer_item.id %>").html("<%= escape_javascript(render(:partial => 'bars/track_it', :locals => { :item => @beer_item })) %>");
+<% when "beers_page" %>
+  $("span#beer_tracker").html("<%= escape_javascript(render(:partial => 'beers/beer_tracker')) %>");
+<% when "beers_index" %>
+  $("div#beer-tracking-<%= @beer.id %>").html("<%= escape_javascript(render(:partial => 'beers/track_it', :locals => { :beer => @beer })) %>");
+<% end %>
 $("span#user-stats").html("<%= escape_javascript(render "/layouts/user_stats") %>");
-$("#beer_tracker_form_<%= @beer_item.id %>").html("<%= escape_javascript(render(:partial => 'bars/track_it', :locals => { :item => @beer_item })) %>");
