--- a/app/views/beers/_beer_items_list.html.slim
+++ b/app/views/beers/_beer_items_list.html.slim
@@ -1,30 +1,30 @@
 table id="sorted_beer_item_list"
   thead
     tr
-      th width=150
+      th width="20%"
         = sortable "bars.name", "Bar"
         span class="asc"
-      th width=150  Address
-      th width=100
-        = sortable "price", "Price"
-        span class="asc"
-      th width=150
+      th width="25%"  Address
+      th width="12%"
         = sortable "volume", "Pouring"
         span class="asc"
-      th width=100 class="abd-table-heading"
+      th width="8%" class="abd-table-heading"
         = sortable "abd", "ABD (oz)"
         span class="asc"
-      th
-      th
-      th
+      th width="8%"
+        = sortable "price", "Price"
+        span class="asc"
+      th width="6%"
+      th width="6%"
+      th width="6%"
   tbody class="with-action-links"
     - @beer_items.each do |item|
       tr
         td = link_to item.bar.name, item.bar
         td = item.bar.address
-        td = number_to_currency(item.price)
         td = pouring(item)
         td = sprintf("%.3f",item.abd)
+        td = number_to_currency(item.price)
         - if user_signed_in?
           td class="text-align-center"
             = link_to 'Details', item, :class => "action_link"
