--- a/app/views/profiles/_beers_had.html.slim
+++ b/app/views/profiles/_beers_had.html.slim
@@ -1,10 +1,10 @@
 table id="beer-item-preview"
   thead
     tr align="left"
-      th width=25 Name
-      th width=25 Brewery
-      th width=20 Style
-      th width=15 Pouring at...
+      th width="30%" Beer
+      th width="30%" Brewery
+      th width="20%" Style
+      th width="20%" Pouring at...
   tbody id="main-body"
     - current_user.had_beers.each do |beer|
       tr data-url="#{ beer_path(beer)}" data-id="#{ beer.id }"
