view refinements.  corrected an error that would occur if you tried sorting menu items on a bars page

--- a/app/views/beers/_beers_list.html.slim
+++ b/app/views/beers/_beers_list.html.slim
@@ -3,7 +3,7 @@ table
     tr align="left"
       - if user_signed_in?
         th width=25 Had it?
-      th width=25 Name
+      th width=25 Beer
       th width=25 Brewery
       th width=20 Style
       th width=15 Pouring at...
