--- a/app/views/beer_items/index.html.slim
+++ b/app/views/beer_items/index.html.slim
@@ -10,7 +10,7 @@ div id="main-page-intro-text"
 		| Bars are constantly being added, so check back if you don&#146;t see what you&#146;re looking for.  If you&#146;d like to hear about our updates, #{{link_to "follow us on twitter", "http://twitter.com/#!/atlbeerlist", :target => "_blank"}}.
 
 div id="best-deals-table-wrapper"
-  h2 Specials going on today
+  h2 Good deals happening on #{ Time.now.strftime("%A").pluralize }
   br
   div id="todays_specials"
     = render "todays_specials"
