--- a/app/views/bars/_form.html.slim
+++ b/app/views/bars/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for(@bar, :html => { :class => "bigform" }) do |f|
+= form_for(@bar, :html => { :class => "bigform", :multipart => true }) do |f|
   - if @bar.errors.any?
     div id="error_explanation"
       h2 = error_messages_for @bar, :header_message => "Whoops!", :message => "Please address the following:"
@@ -27,8 +27,7 @@
     br
     = f.text_field :url
   div class="field"
-    = f.label :description
-    br
-    = f.text_area :description
+    = f.file_field :photo
+
   div class="actions"
     = f.submit
