added a div that shows if the bar photo isn't available

--- a/app/views/bars/_form.html.slim
+++ b/app/views/bars/_form.html.slim
@@ -26,8 +26,12 @@
     = f.label "Url"
     br
     = f.text_field :url
+    
   div class="field"
+    = f.label "Image"
+    br
     = f.file_field :photo
+    p style="margin-left: 215px;" Photo must be in *.jpg or *.png format and must be less than 2 MB in size
 
   div class="actions"
     = f.submit
