--- a/app/views/bars/show.html.slim
+++ b/app/views/bars/show.html.slim
@@ -8,7 +8,11 @@
 
 h1  = @bar.name
 p
-  = image_tag @bar.photo.url(:small), :id => "bar-photo"
+  - if @bar.photo.present?
+    = image_tag @bar.photo.url(:small), :id => "bar-photo"
+  - else
+    div id="bar-photo-missing"
+      p = link_to "Add a photo!", edit_bar_path(@bar)
   br
   = @bar.address
   br
