--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -603,7 +603,22 @@ img#bar-photo {
   float: right;
   margin-right: 60px;
 }
-
+div#bar-photo-missing {
+  height: 150px;
+  width: 150px;
+  float: right;
+  margin-right: 60px;
+  border: solid #bbb 1px;
+  background: #D8D8D8;
+  text-align: center;
+  border-radius: 10px;
+}
+div#bar-photo-missing p {
+  margin-top: 60px;
+}
+div#bar-photo-missing a {
+  color: white;
+}
 p#toggle-map-link a {
   cursor: pointer;
 }
