--- a/app/views/bars/_track_it.html.slim
+++ b/app/views/bars/_track_it.html.slim
@@ -1,6 +1,6 @@
 - if user_signed_in?
-  - if current_user.has_drunk?(item.beer)
-    = form_for current_user.beer_tracks.find_by_beer_id(item.beer.id), :html => { :method => :delete, :id => "beer_tracks_#{item.id}" }, :remote => true do |h|
+  - if @had_beers.include? item.beer
+    = form_for @beer_tracks.select { |i| i.beer_id == item.beer.id }, :html => { :method => :delete, :id => "beer_tracks_#{item.id}" }, :remote => true do |h|
       div class="beer_tracking"
         = h.hidden_field :bar_id
         = hidden_field_tag "beer_item_id", item.id
