failed attempt at getting a working loading message on beers/index

--- a/app/views/beers/_beers_list.html.slim
+++ b/app/views/beers/_beers_list.html.slim
@@ -1,20 +1,22 @@
-table
-  thead
-    tr align="left"
-      - if user_signed_in?
-        th width=25 Had it?
-      th width=25 Beer
-      th width=25 Brewery
-      th width=20 Style
-      th width=15 Pouring at...
-  tbody
-    - @beers.each do |beer|
-      tr data-url="beers/#{beer.id}"
+div
+  table id="beer-items-table"
+    thead
+      tr align="left"
         - if user_signed_in?
-          td
-            div id="beer-tracking-#{beer.id}"
-              = render :partial => "track_it", :locals => { :beer => beer }
-        td = link_to beer.name, beer
-        td = link_to beer.brewery.name, beer.brewery
-        td = beer.try(:beer_style) ? beer.beer_style.name : nil
-        td = pluralize(beer.bars.count,"bar")
+          th width=25 Had it?
+        th width=25 Beer
+        th width=25 Brewery
+        th width=20 Style
+        th width=15 Pouring at...
+    tbody
+      - @beers.each do |beer|
+        tr data-url="beers/#{beer.id}"
+          - if user_signed_in?
+            td
+              div id="beer-tracking-#{beer.id}"
+                = render :partial => "track_it", :locals => { :beer => beer }
+          td = link_to beer.name, beer
+          td = link_to beer.brewery.name, beer.brewery
+          td = beer.try(:beer_style) ? beer.beer_style.name : nil
+          td = pluralize(beer.bars.count,"bar")
+  / = image_tag "ajax-loader.gif", :id => "beers-loading-animation"
