--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -622,3 +622,12 @@ div#bar-photo-missing a {
 p#toggle-map-link a {
   cursor: pointer;
 }
+table.expandable_itemlist tr {
+  cursor: pointer;
+}
+div#beer_list_index img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+ /* z-index: 1;*/
+}
