added indexing for beers and bars

--- a/app/views/beer_items/_form.html.slim
+++ b/app/views/beer_items/_form.html.slim
@@ -7,7 +7,10 @@
     = f.label "Beer Name"
     br
     = grouped_collection_select :beer_item, :beer_id, Brewery.order('name ASC'), :beers, :name, :id, :name
-
+    
+  div id="new-beer-from-beer-item"
+    = render "new_beer"
+    
   div class="field"
     = f.label "Bar Name"
     br
