--- a/app/views/bars/show.html.slim
+++ b/app/views/bars/show.html.slim
@@ -5,6 +5,7 @@
   = javascript_include_tag "gmaps4rails/gmaps4rails.mapquest.js"
   = javascript_include_tag "gmaps4rails/gmaps4rails.openlayers.js"
   = javascript_include_tag "rating_ballot"
+  = stylesheet_link_tag "gmaps4rails.css"
 
 h1  = @bar.name
 p
