--- a/app/views/layouts/_doc_header.html.slim
+++ b/app/views/layouts/_doc_header.html.slim
@@ -7,6 +7,12 @@ head
   = javascript_include_tag "jquery.qtip.min.js"
   = javascript_include_tag "jquery-ui-1.8.16.custom.min.js"
   = javascript_include_tag "jquery.metadata.js"
+  / = javascript_include_tag "gmaps4rails/gmaps4rails.base.js"
+  / = javascript_include_tag "gmaps4rails/gmaps4rails.googlemaps.js"
+  / = javascript_include_tag "gmaps4rails/gmaps4rails.bing.js"
+  / = javascript_include_tag "gmaps4rails/gmaps4rails.mapquest.js"
+  / = javascript_include_tag "gmaps4rails/gmaps4rails.openlayers.js"
+  / = javascript_include_tag "rating_ballot"
   = javascript_include_tag "script.js"
   = yield :scripts
   link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'
