fixed maps on bars page

--- a/app/views/bars/show.html.slim
+++ b/app/views/bars/show.html.slim
@@ -1,9 +1,9 @@
 - content_for :head do
-  = javascript_include_tag "gmaps4rails/gmaps4rails.base.js"
-  = javascript_include_tag "gmaps4rails/gmaps4rails.googlemaps.js"
-  = javascript_include_tag "gmaps4rails/gmaps4rails.bing.js"
-  = javascript_include_tag "gmaps4rails/gmaps4rails.mapquest.js"
-  = javascript_include_tag "gmaps4rails/gmaps4rails.openlayers.js"
+  = javascript_include_tag "gmaps4rails/gmaps4rails.base.js.js"
+  = javascript_include_tag "gmaps4rails/gmaps4rails.googlemaps.js.js"
+  = javascript_include_tag "gmaps4rails/gmaps4rails.bing.js.js"
+  = javascript_include_tag "gmaps4rails/gmaps4rails.mapquest.js.js"
+  = javascript_include_tag "gmaps4rails/gmaps4rails.openlayers.js.js"
   = javascript_include_tag "rating_ballot"
   = stylesheet_link_tag "gmaps4rails.css"
 
