--- a/app/views/layouts/_doc_header.html.slim
+++ b/app/views/layouts/_doc_header.html.slim
@@ -6,16 +6,8 @@ head
   = javascript_include_tag "jquery.rails.js"
   = javascript_include_tag "jquery.qtip.min.js"
   = javascript_include_tag "jquery-ui-1.8.16.custom.min.js"
-  = javascript_include_tag "jquery.metadata.js"
-  / = javascript_include_tag "gmaps4rails/gmaps4rails.base.js"
-  / = javascript_include_tag "gmaps4rails/gmaps4rails.googlemaps.js"
-  / = javascript_include_tag "gmaps4rails/gmaps4rails.bing.js"
-  / = javascript_include_tag "gmaps4rails/gmaps4rails.mapquest.js"
-  / = javascript_include_tag "gmaps4rails/gmaps4rails.openlayers.js"
-  / = javascript_include_tag "rating_ballot"
   = javascript_include_tag "script.js"
-  = yield :scripts
-  link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'
+  = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Droid+Sans'
   = csrf_meta_tag
   javascript:
     var _gaq = _gaq || [];
@@ -27,5 +19,4 @@ head
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
-
   = yield :head
